--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@astrojs/tailwind": "^2.1.3",
     "@fontsource/inter": "^4.5.14",
     "@types/alpinejs": "^3.7.1",
+    "alpinejs": "^3.12.0",
     "astro": "^1.9.1",
     "astro-color-scheme": "^1.0.1",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
+    "astro-scroll-observer": "^0.5.3",
     "astro-seo": "^0.6.1",
     "mdast-util-to-string": "^3.1.0",
     "reading-time": "^1.5.0",
