--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "astro-icon": "^0.8.0",
     "astro-scroll-observer": "^0.5.3",
     "astro-seo": "^0.6.1",
+    "daisyui": "^2.51.6",
     "mdast-util-to-string": "^3.1.0",
     "reading-time": "^1.5.0",
     "rehype-plugin-image-native-lazy-loading": "^1.2.0",
